--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 .App {
   text-align: center;
+  background-color: #61dafb;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.componentholder{
+  height: 100vh; /* Magic here */
+  width: "100%";
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0b5cff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +28,5 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
