Some Additon to the Admin Pages

--- a/src/CSS/loginstyle.css
+++ b/src/CSS/loginstyle.css
@@ -22,8 +22,10 @@ font-family: "Source Sans Pro", sans-serif;
 }
 
 .container1 {
-  width: 450px;
-  height: 500px;
+  /* width: 450px;
+  height: 500px; */
+  width: auto;
+  height: auto;
   border-radius: 7px;
   /* box-shadow: 0 6px 12px rgba(179, 179, 179, 0.7); */
   z-index: 1;
